Static/style.css
body {
    font-family: monospace;
    margin: 1.3ch;
}

a, a:visited {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

nav {
    width: 100%;
    position: fixed;
    left: 0;
    top: 0;
    padding-top: 0.25ch;
    padding-bottom: 0.25ch;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    z-index: 1;
}

nav a {
    display: inline-block;
}

nav a.system, nav a.board {
    margin-left: 1.5ch;
}

nav a.system {
    font-weight: bold;
}

nav span#logged-in-notification {
    float: right;
    margin-right: 1.5ch;
}

nav:not(:hover):not(:focus-within) {
    white-space: nowrap;
}

main {
    margin-top: 30px;
}

img#banner {
    display: block;
    margin: auto;
}

h1.redheader, h1#boardtitle {
    text-align: center;
    margin-top: 5px;
}

h1#boardtitle a {
    color: inherit;
}

h2#boardsubtitle {
    font-weight: normal;
    font-size: 10pt;
    text-align: center;
    margin-top: -15px;
}

div#announce {
    text-align: center;
    font-weight: bold;
    font-size: 13pt;
    margin-bottom: 10px;
}

div.container {
    margin: auto;
    padding: 10px;
    border-width: 1px;
    border-style: solid;
}

div.container.narrow {
    max-width: 650px;
}

div.container.wide {
    max-width: 1150px;
}

h2.barheader {
    margin-left: -10px;
    margin-right: -10px;
    padding-left: 10px;
    font-size: 12pt;
}

div.container ul {
    list-style: none;
    padding-left: 16px;
}

div.container ul > li::before {
    content: "*";
    padding-right: 8px;
}

table {
    border-spacing: 2px;
    width: 100%;
}

th {
    text-align: left;
    font-weight: bold;
}

th, td {
    padding: 3px 5px;
}

form label {
    display: inline-block;
    min-width: 18ch;
    vertical-align: top;
    margin-right: 5px;
    margin-bottom: 5px;
    padding: 3px 5px;
}

form input,
form input[type=file]::file-selector-button {
    font-family: inherit;
}

form input[type=text],
form input[type=password],
form input[type=number],
form input[type=checkbox],
form input[type=submit],
form input[type=file]::file-selector-button,
form select,
form textarea {
    border-width: 1px;
    border-style: solid;
}

form textarea {
    resize: both;
}

form input[type=radio] {
    vertical-align: middle;
    margin-left: 18ch;
}

form input[type=radio] + label {
    vertical-align: middle;
    margin-bottom: 8px;
    padding: 8px;
}

form input[type=radio] + label > img {
    display: block;
    max-height: 100px;
}

div.post-container + form {
    margin-top: 5px;
}

form#postform {
    position: fixed;
    top: calc(3.5ch + 1px);
    right: 1.3ch;
    border-width: 1px;
    border-style: solid;
    padding: 5px;
    max-width: 90%;
    display: none;
}

form#postform:target {
    display: block;
}

form#postform a.close-button {
    float: right;
    font-weight: bold;
}

form#postform label {
    min-width: min-content;
    width: 7ch;
}

form#postform textarea {
    width: calc(100% - 7ch - 25px);
    min-width: calc(100% - 7ch - 25px);
    max-width: calc(100% - 7ch - 25px);
    margin: 0 0 5px 0;
}

form#postform input[type=submit] {
    margin-left: 5px;
}

form#postform input[type=file] {
    max-width: 300px;
    vertical-align: top;
    margin-right: 5px;
}

a#new-post {
    font-size: 15pt;
    font-weight: bold;
    display: table;
    margin: auto;
}

hr {
    margin: 1.3ch 0;
    height: 0;
    border: none;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    clear: both;
}

div.catalog-container {
    text-align: center;
}

div.catalog-thread {
    display: inline-block;
    width: 150px;
    height: 200px;
    margin-right: 1.3ch;
    margin-bottom: 8px;
    padding: 10px;
    border-width: 1px;
    border-style: solid;
    overflow: auto;
    scrollbar-width: thin;
}

div.catalog-thread-info, div.catalog-thread-subject {
    font-weight: bold;
}

div.catalog-thread-lastbumpdate {
    font-size: 7.5pt;
}

div.index-thread span.index-thread-summary {
    margin-left: 1.3ch;
}

div.post-container {
    margin-top: calc(-3ch + 1px);
    padding-top: calc(3ch - 1px);
}

div.post {
    margin-top: 1.3ch;
    padding: 1.3ch;
    border-width: 1px;
    border-style: solid;
    display: table;
}

div.thread {
    background: none !important;
    border: none;
    display: block;
    margin-top: 0;
}

div.post-container:target div.thread {
    display: table;
}

div.post-header span.post-thread-link,
div.post-header span.post-subject,
div.post-header span.post-name {
    font-weight: bold;
}

div.post-header span.post-number a {
    text-decoration: none;
}

div.post-header a.referrer, div.post-file-info {
    font-size: 7.5pt;
}

div.post-file {
    display: inline-block;
    margin: 0 1.3ch 1.3ch 0;
}

div.post-file, div.post-file-single {
    overflow-wrap: anywhere;
}

div.post-file-info > a:first-child {
    display: inline-block;
    max-width: 200px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

div.post-file-info > a:first-child:hover {
    max-width: 100%;
}

img.post-file-thumbnail {
    cursor: pointer;
}

video.post-video {
    max-width: 320px;
    max-height: 240px;
}

img.post-file-thumbnail, video.post-video, audio.post-audio {
    float: left;
}

img.post-file-thumbnail, img.post-file-fullsize, video.post-video, audio.post-audio {
    margin-top: 1.3ch;
    margin-right: 1.3ch;
}

div.thread img.post-file-thumbnail {
    margin-bottom: 1.3ch;
}

input[type=checkbox]:checked + img.post-file-thumbnail {
    display: none;
}

input[type=checkbox]:checked + img.post-file-thumbnail + img.post-file-fullsize {
    display: block;
}

img.post-file-fullsize {
    display: none;
    max-width: 100%;
    margin-bottom: 1.3ch;
    cursor: pointer;
}

div.post-file-single img.post-file-fullsize {
    float: left;
}

div.post-comment, div.catalog-thread-comment {
    white-space: pre-wrap;
    overflow-wrap: break-word;
    margin: 1.3ch;
    margin-bottom: 0.7ch;
    max-width: 150ch;
    display: block;
}

div.post-comment a, div.catalog-thread-comment a {
    text-decoration: underline;
}

span.redtext {
    font-weight: bolder;
    font-size: 11pt;
    letter-spacing: -0.7px;
}

span.spoiler {
    cursor: none;
}

code {
    margin: 1ch 0;
    padding: 1ch;
    border-width: 1px;
    border-style: solid;
}

span.code {
    padding-left: 0.5ch;
    padding-right: 0.5ch;
}

code, span.code {
    display: inline-block;
    max-width: max-content;
}

div.page-switcher {
    display: table;
    width: 100%;
}

div.page-switcher-list {
    display: table-cell;
    text-align: center;
}

.invisible {
    display: none;
}

.float-right {
    float: right;
}

